--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -34,6 +34,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
         with:
           tagName: v${{ env.PACKAGE_VERSION }}
           releaseName: 'App v${{ env.PACKAGE_VERSION }}'
