--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -184,7 +184,7 @@ jobs:
 
   update-gist:
     runs-on: ubuntu-latest
-    needs: build_and_publish # This ensures the Gist update job runs only after the build is complete
+    needs: build_and_publish
     permissions:
       contents: none
     steps:
@@ -193,9 +193,9 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Install jq
-        run: |
-          npm install -g jq
+      # Use a dedicated action to set up the native jq binary
+      - name: Setup jq
+        uses: shivammathur/setup-jq@v2
 
       - name: Get version
         id: version
@@ -205,7 +205,7 @@ jobs:
       # The tauri-action will create the updater.json file. We need to download it to get the signature.
       - name: Download updater.json
         run: |
-          curl -sS -L -o updater.json https://github.com/${{ github.repository }}/releases/download/v${{ env.PACKAGE_VERSION }}/latest.json
+          curl -sS -L -o updater.json https://github.com/${{ github.repository }}/releases/download/v${{ env.PACKAGE_VERSION }}/Latest_Landlord.json
         shell: bash
 
       - name: Update Gist with Latest_Landlord.json
