--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "landlord",
 	"private": true,
-	"version": "0.0.1",
+	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.9",
 		"@tauri-apps/plugin-fs": "^2.4.1",
+		"@tauri-apps/plugin-process": "^2.3.0",
 		"@tauri-apps/plugin-updater": "^2.9.0",
 		"@types/lodash": "^4.17.20",
 		"lodash": "^4.17.21",
