--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2.7.0", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-fs = "2.4.1"
+tauri-plugin-process = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
