--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }} # Pass the variable here
         with:
           tagName: v${{ env.PACKAGE_VERSION }}
           releaseName: 'App v${{ env.PACKAGE_VERSION }}'
