--- a/.github/workflows/updateGist.yml
+++ b/.github/workflows/updateGist.yml
@@ -39,7 +39,7 @@ jobs:
             echo "Attempting to download asset: ${asset_name}"
             
             if gh release download "app-v${PACKAGE_VERSION}" --repo "${REPO}" --pattern "${asset_name}" --dir temp_sigs 2>/dev/null; then
-              # Check if the downloaded file exists inside the temp_sigs directory
+              # Find the downloaded file inside the temp_sigs directory
               downloaded_file=$(find temp_sigs -type f -name "${asset_name}" -print -quit)
               if [ -n "$downloaded_file" ]; then
                 echo "✓ Downloaded signature for $platform"
@@ -60,7 +60,7 @@ jobs:
           DARWIN_AARCH64_SIG=$(download_signature "*aarch64*.sig" "darwin-aarch64" || download_signature "*aarch64*.dmg.tar.gz.sig" "darwin-aarch64" || echo "")
           DARWIN_X86_64_SIG=$(download_signature "*x64*.sig" "darwin-x86_64" || download_signature "*x64*.dmg.tar.gz.sig" "darwin-x86_64" || echo "")
           LINUX_X86_64_SIG=$(download_signature "*amd64*.sig" "linux-x86_64" || download_signature "*amd64*.deb.sig" "linux-x86_64" || echo "")
-          WINDOWS_X86_64_SIG=$(download_signature "*x64*.msi*.sig" "windows-x86_64" || download_signature "*x64*.msi.zip.sig" "windows-x86_64" || echo "")
+          WINDOWS_X86_64_SIG=$(download_signature "*x64*.msi.zip.sig" "windows-x86_64" || echo "")
 
           # Create the updater JSON content
           cat > latest-landlord.json << EOF
