--- a/.github/workflows/updateGist.yml
+++ b/.github/workflows/updateGist.yml
@@ -36,26 +36,29 @@ jobs:
             local asset_name="$1"
             local platform="$2"
             
-            echo "Attempting to download asset: ${asset_name}"
+            # Print status message to stderr to avoid capturing it
+            echo "Attempting to download asset: ${asset_name}" >&2
             
             if gh release download "app-v${PACKAGE_VERSION}" --repo "${REPO}" --pattern "${asset_name}" --dir temp_sigs 2>/dev/null; then
               # Find the downloaded file inside the temp_sigs directory
               downloaded_file=$(find temp_sigs -type f -name "${asset_name}" -print -quit)
               if [ -n "$downloaded_file" ]; then
-                echo "✓ Downloaded signature for $platform"
-                # Read the content of the downloaded file
+                # Print success message to stderr
+                echo "✓ Downloaded signature for $platform" >&2
+                # Read the content of the downloaded file and print to stdout
                 cat "$downloaded_file"
                 return 0
               fi
             fi
             
-            echo "⚠ Could not find signature file: ${asset_name}"
-            echo ""
+            # Print failure message to stderr
+            echo "⚠ Could not find signature file: ${asset_name}" >&2
+            echo "" >&2
             return 1
           }
 
-          # Try to download signature files - these may have different naming patterns
-          echo "Attempting to download signature files..."
+          # Try to download signature files
+          echo "Attempting to download signature files..." >&2
 
           DARWIN_AARCH64_SIG=$(download_signature "*aarch64*.sig" "darwin-aarch64" || download_signature "*aarch64*.dmg.tar.gz.sig" "darwin-aarch64" || echo "")
           DARWIN_X86_64_SIG=$(download_signature "*x64*.sig" "darwin-x86_64" || download_signature "*x64*.dmg.tar.gz.sig" "darwin-x86_64" || echo "")
@@ -89,8 +92,8 @@ jobs:
           }
           EOF
 
-          echo "Generated latest-landlord.json content:"
-          cat latest-landlord.json
+          echo "Generated latest-landlord.json content:" >&2
+          cat latest-landlord.json >&2
 
           # Cleanup temporary files
           rm -rf temp_sigs
